src/test/deca/context/invalid/object/class_class_extended_and_class.deca
//  Description :
// 
//      Test syntaxiquement incorrect de la déclaration d'une classe extended avec sa classe mère après
// 
//  Résultats : 
// 
//      N/A
// 
//  Historique :
// 
//      Créé le 13/06 par gl03

class B extends A {

}

class A {
    
}